Update swagger doc for trips and fix duplicate reflection register
